<resources>
    <string name="app_name">CS323-AveryOdProject</string>
    <string name="message">Choose what dink you want to order!</string>
    <string name="sugar">Sugar</string>
    <string name="milk">Milk</string>
    <string name="caramel">Caramel</string>
    <string name="mocha">Mocha</string>
    <string name="temp">Tempature: </string>
    <string name="hot">HOT</string>
    <string name="cold">ICED</string>
    <string name="name">Name for Order:</string>
    <string name="Drink">Drink:</string>
    <string name="Flavor">Flavor:</string>
    <string name="vanilla">Vanilla</string>
    <string name="creamer">Creamer</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="latte">Latte</string>
    <string name="americano">Americano</string>
    <string name="Extras">Extras:</string>
    <string name="submit">Submit Order</string>
    <string name="ordered">Your order is being made!</string>
    <string name="action_create_order">Create Order</string>
    <string name="title_order_activity">Create Order</string>
    <string name="create_your_order">Create your order in action bar!</string>
    <string-array name="options">
        <item>Cappuccino</item>
        <item>Latte</item>
        <item>Americano</item>
    </string-array>
    <string name="text1">Drinks offered at the moment:</string>
</resources>
